syntax = "proto3";

package message;
//login request 
message LoginMsgRequest {
  int64 uid  =1;
}
//login reply
message LoginMsgReply {
  int32  result  = 1;
}

//logout request
message LogOutMsgRequest{
  int64 uid  = 1;
}
//logout reply
message LogOutMsgReply{
    string result = 1;
}